--- a/filebeat/config/filebeat-jarc.yml
+++ b/filebeat/config/filebeat-jarc.yml
@@ -1,7 +1,7 @@
 filebeat.inputs:
 - type: log
   paths:
-    - /Users/selcuk/versapay/logs/*.log
+    - ${JARC_HOME}/logs/*.log
   tags: ["jarc"]
   json.key_under_root: true
   json.add_error_key: false
